--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "vite",
-    "dev": "vite --port 3000",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
